# Projekt2

./: .gitignore  pyproject.toml  requirements.txt
.dvc/: config
.github/workflows/: pripravi_podatke.yml
data/processed/: .gitignore  reference_data.csv.dvc  reference_data1.csv.dvc
data/raw/: traffic_data.csv  traffic_incidents_data.csv  weather_data.csv
