[tool.poetry]
name = "projekt-inzinerstvo-inteligentnih-sistemov"
version = "0.1.0"
description = ""
authors = ["Benjamin <benjamin.petelinek@gmail.com>"]
readme = "README.md"
packages = [{include = "projekt_inzinerstvo_inteligentnih_sistemov"}]

[tool.poetry.dependencies]
python = "^3.9"
tensorflow = "2.10.1"
tensorflow-estimator = "2.10.0"
tensorflow-io-gcs-filesystem = { version = "^0.31.0", python = ">=3.7, <3.12" }
scikit-learn = "^1.5.0"
pandas = "^2.2.2"
requests = "^2.32.2"
dvc = "^3.51.1"
great-expectations = "^0.18.14"
matplotlib = "^3.9.0"
mlflow = "^2.13.0"
flake8 = "^7.0.0"
evidently = "^0.4.25"
black = "^24.4.2"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
